Mon Apr 26 16:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	Initial checkin of library.