@@ -12,8 +12,8 @@
       <dd>
       </dd>
     </dl>
-    <p><b>Version:</b> 1.1</p>
-    <p><b>Date:</b> 2004/04/26 15:13:27</p>
+    <p><b>Version:</b> 1.2</p>
+    <p><b>Date:</b> 2004/04/27 08:23:15</p>
     <p><b>Copyright:</b> (C) 2004 Free Software Foundation, Inc.</p>
 
         <div>
@@ -223,7 +223,9 @@ Current backend bundles are -    </p>
           Bug reports, patches, and contributions (eg a backend
           bundle for a new database) should be entered on the
           GNUstep project page
-          &lt;http://savannah.gnu.org/support/?group-gnustep&gt;
+          &lt;http://savannah.gnu.org/projects/gnustep&gt;
+          and the bug reporting page
+          &lt;http://savannah.gnu.org/bugs/?group=gnustep&gt;
             </p>
 
           <h1><a name="002000000000">
